# gateway

./: .gitignore  CMakeLists.txt  README.md
script/: kill.sh
src/: main.c  pool.c
src/c/: helper.c  helper.h
src/http/: server.c  server.h
src/pool/: manager.c  manager.h
src/struct/: thread_pool_t.h  thread_pool_task_t.h
src/utils/: helper.h
